Modificando o menu para dispositivos móveis

--- a/_posts/pt/2016-10-17-dbpedia-2016-04.md
+++ b/_posts/pt/2016-10-17-dbpedia-2016-04.md
@@ -7,6 +7,7 @@ categories: releases
 resume: " A versão 2016-04 baseada nos dumps de Março/Abril de 2016 acaba de ser lançada[...]"
 author: Traduzido por Sandro A. Coelho
 office: DBpedia Português - Brasil
+lang: pt
 ---
 
 A versão 2016-04 baseada nos dumps de Março/Abril de 2016 da Wikipedia acaba de ser lançada, contendo um significativo avanço na base de informações com dados mais ricos e (esperadamente) mais limpos, baseados na ontologia da DBpedia.
