--- a/_posts/pt/2016-03-01-gsoc.markdown
+++ b/_posts/pt/2016-03-01-gsoc.markdown
@@ -5,6 +5,7 @@ date:   2016-03-01 11:44:06 -0300
 comments: true
 categories: GSoC2016
 resume: "O GSoC está para começar e a DBpedia irá participar novamente no GSOC 2016. Então para os professores [...]"
+lang: pt
 ---
 O GSoC está para começar e a DBpedia irá participar novamente no GSOC 2016. Então para os professores que tem projetos open source, e para os alunos que querem se ocupar no inverno e aprender mais enquanto recebem uma bolsa do Google, esta é a sua chance.
 
