--- a/_posts/pt/2017-02-27-gsoc.md
+++ b/_posts/pt/2017-02-27-gsoc.md
@@ -7,6 +7,7 @@ categories: gsoc
 resume: "Como nos anos anteriores, gostaríamos de sua contribuição para idéias de projeto relacionadas ao DBpedia ..."
 author: Sandro Coelho
 office: DBpedia Português - Brasil
+lang: pt
 ---
 
 Queridos DBpedian(o)(a)s
